Style balance, and resolve minor int conversion bug

--- a/webserver/html/index.html
+++ b/webserver/html/index.html
@@ -51,7 +51,7 @@
         Balance
       </div>
       <div>
-          <p class="sidebar-brand-text mx-3" id="balance">0.00</p>
+          <p class="sidebar-brand-text mx-3" style="color: #FFFFFF; font-size: x-large;" id="balance"></p>
       </div>
 
     </ul>
