Add buy/sell reserved table to front end

--- a/webserver/html/index.html
+++ b/webserver/html/index.html
@@ -181,6 +181,36 @@
                 <tbody>
                 </tbody>
               </table>
+            <hr class="sidebar-divider">  
+            <h6 class="m-0 font-weight-bold text-primary" style="text-align: center; font-size: large" >STAGED BUYS</h6>
+            <hr class="sidebar-divider"> 
+            <table class="table" id="triggers">
+                <thead>
+                  <tr>
+                    <th scope="col">STOCK SYMBOL</th>
+                    <th scope="col">QUANTITY</th>
+                    <th scope="col">PRICE PER STOCK</th>
+                    <th scope="col">TOTAL</th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+              </table>
+            <hr class="sidebar-divider">  
+            <h6 class="m-0 font-weight-bold text-primary" style="text-align: center; font-size: large" >STAGED SELLS</h6>
+            <hr class="sidebar-divider"> 
+            <table class="table" id="triggers">
+                <thead>
+                  <tr>
+                    <th scope="col">STOCK SYMBOL</th>
+                    <th scope="col">QUANTITY</th>
+                    <th scope="col">PRICE PER STOCK</th>
+                    <th scope="col">TOTAL</th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+              </table>
 
 
                 </div>
