two decimals on staged buys/sells

--- a/webserver/html/index.html
+++ b/webserver/html/index.html
@@ -628,7 +628,7 @@
               a.insertCell(0).innerHTML = stock_symbol; 
               a.insertCell(1).innerHTML = stock_quantity; 
               a.insertCell(2).innerHTML = price; 
-              a.insertCell(3).innerHTML = amount; 
+              a.insertCell(3).innerHTML = convert_to_dollar_amount(amount); 
             }
           }
 
@@ -647,7 +647,7 @@
               a.insertCell(0).innerHTML = stock_symbol; 
               a.insertCell(1).innerHTML = stock_quantity; 
               a.insertCell(2).innerHTML = price; 
-              a.insertCell(3).innerHTML = amount; 
+              a.insertCell(3).innerHTML = convert_to_dollar_amount(amount); 
             }
           }
 
